# flashrna

./: README.md  environment.yml  pyproject.toml
data/: README.md  borzoi_tracks_mapping_hg38.csv  borzoi_tracks_mapping_mm10.csv  flashrna_tracks_mapping_hg38.csv  flashrna_tracks_mapping_mm10.csv
examples/: basic_setup.ipynb
flash_rna/: config.py
flash_rna/data/: borzoi.py  seqtrack.py  sequences.py  tracks_mapping.py
flash_rna/models/: __init__.py  flashrna.py  utils.py
flash_rna/models/layers/: attention.py  common.py  conv.py
flash_rna/models/modules/: transformer.py  unet.py
